Finished multiplyer_w00 layout with LVS passing

--- a/cadence/LVS/si.env
+++ b/cadence/LVS/si.env
@@ -6,7 +6,7 @@ simNotIncremental = 't
 simReNetlistAll = nil
 simViewList = '("auLvs" "schematic")
 simStopList = '("auLvs")
-lvsLayoutCellName = "Inv_Minsize"
+lvsLayoutCellName = "multiplier_w00"
 lvsLayoutLibName = "ECE555"
 lvsLayoutViewName = "extracted"
 lvsLayoutViewList = '("auLvs" "extracted" "schematic")
